fix(battle): highlight text is more readable

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -140,3 +140,8 @@ ion-list {
 [menuToggle] {
   display: inline;
 }
+
+.highlighted-text {
+  padding: 2px;
+  line-height: 1.5;
+}
